--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -2,6 +2,7 @@
 <head>
 	<link href="estilos.css" rel="stylesheet">
 	<meta charset="UTF-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIF.OS</title>
 	<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;500&display=swap" rel="stylesheet">
